--- a/slurm.conf
+++ b/slurm.conf
@@ -51,7 +51,8 @@ SlurmctldDebug=7
 SlurmctldLogFile=/var/log/slurmctld.log
 SlurmdDebug=7 
 SlurmdLogFile=/var/log/slurmd.log
-# 
+#
+TmpFS=/workspace/tmp 
 # 
 # COMPUTE NODES 
 NodeName=csh-tails NodeHostname=csh-tails.rit.edu CPUs=24 RealMemory=48129 Sockets=2 CoresPerSocket=6 ThreadsPerCore=2 State=UNKNOWN
