changed TmpFS to reflect new mount points

--- a/slurm.conf
+++ b/slurm.conf
@@ -2,7 +2,7 @@
 #this file needs to be identical between all nodes
 #to refresh configuration file, run 'scontrol reconfigure' on the desired node
 
-# v1.02
+# v1.03
 
 #=========================================================================
 
@@ -52,7 +52,7 @@ SlurmctldLogFile=/var/log/slurmctld.log
 SlurmdDebug=7 
 SlurmdLogFile=/var/log/slurmd.log
 #
-TmpFS=/workspace/tmp 
+TmpFS=/cluster-workspace/tmp 
 # 
 # COMPUTE NODES 
 NodeName=csh-tails NodeHostname=csh-tails.rit.edu CPUs=24 RealMemory=48129 Sockets=2 CoresPerSocket=6 ThreadsPerCore=2 State=UNKNOWN
