adding task/affinity plugin to our scheduler

--- a/slurm.conf
+++ b/slurm.conf
@@ -2,7 +2,7 @@
 #this file needs to be identical between all nodes
 #to refresh configuration file, run 'scontrol reconfigure' on the desired node
 
-# v1.04
+# v1.05
 
 #=========================================================================
 
@@ -26,7 +26,8 @@ SlurmUser=slurm
 #SlurmdUser=root 
 StateSaveLocation=/var/spool/slurmctld
 SwitchType=switch/none
-TaskPlugin=task/none
+TaskPlugin=task/affinity
+TaskPluginParam=Sched
 # 
 # 
 # TIMERS 
