--- a/slurm.conf
+++ b/slurm.conf
@@ -2,7 +2,7 @@
 #this file needs to be identical between all nodes
 #to refresh configuration file, run 'scontrol reconfigure' on the desired node
 
-# v1.06
+# v1.07
 
 #=========================================================================
 
@@ -41,6 +41,7 @@ TaskPluginParam=Sched
 FastSchedule=1
 SchedulerType=sched/backfill
 SelectType=select/cons_res
+SelectTypeParameters=CR_CPU
 # 
 # 
 # LOGGING AND ACCOUNTING 
